# esahub

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
esahub/: check.py  checksum.py  cli.py  config.py  config.yaml  geo.py  helpers.py  main.py  scihub.py  tty.py  utils.py
esahub/tests/: __init__.py  config.py  test_all.py  test_cases.py
