[metadata]
name = esahub
author = Johannes Hansen
author-email = johannes.hansen@ed.ac.uk
summary = A Python module for downloading ESA satellite data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = esahub, scihub, sentinel, satellite
license = MIT
home-page = https://github.com/jnhansen/esahub
classifier =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pyyaml
    numpy
    lxml
    pyproj
    shapely
    python-dateutil
    pytz
    tqdm
setup_requires = 
    setuptools_scm
    pytest-runner
tests_require = 
    pytest
    netCDF4


[options.entry_points]
console_scripts =
    esahub = esahub.cli:main


[aliases]
test = pytest


[tool:pytest]
addopts = 
    --verbose
    --duration=10